[gd_scene load_steps=3 format=3 uid="uid://c6q7vvtuiq61v"]

[ext_resource type="Script" path="res://Scripts/mini_map.gd" id="1_f8bh4"]
[ext_resource type="Texture2D" uid="uid://31b1e23daomm" path="res://icon.svg" id="1_t6jgi"]

[node name="MiniMap" type="Control"]
layout_mode = 3
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f8bh4")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_t6jgi")
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
